--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ li {
 
 .prompt_title_local {
     font-family: "Indie Flower", Arial;
-    font-size: 1.8vw;
+    font-size: 22px;
 	color: green;
 	font-weight: bold;
 	text-decoration: underline;
@@ -72,7 +72,7 @@ li {
 
 .prompt_title_red {
     font-family: "Indie Flower", Arial;
-    font-size: 1.4vw;
+    font-size: 22px;
 	color: red;
 	font-weight: bold;
 	text-decoration: underline;
@@ -80,7 +80,7 @@ li {
 
 .prompt_title_blue {
     font-family: "Indie Flower", Arial;
-    font-size: 1.4vw;
+    font-size: 22px;
 	color: blue;
 	font-weight: bold;
 	text-decoration: underline;
@@ -88,7 +88,7 @@ li {
 
 .prompt_title_green {
     font-family: "Indie Flower", Arial;
-    font-size: 1.4vw;
+    font-size: 22px;
 	color: green;
 	font-weight: bold;
 	text-decoration: underline;
@@ -185,7 +185,7 @@ li {
 }
 
 .swiper {
-    width: 30%;
+    width: 500px;
     margin-top: 30px;
 }
 
