--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ li {
 
 .prompt_title_local {
     font-family: "Indie Flower", Arial;
-    font-size: 22px;
+    font-size: 32px;
 	color: green;
 	font-weight: bold;
 	text-decoration: underline;
@@ -72,7 +72,7 @@ li {
 
 .prompt_title_red {
     font-family: "Indie Flower", Arial;
-    font-size: 22px;
+    font-size: 32px;
 	color: red;
 	font-weight: bold;
 	text-decoration: underline;
@@ -80,7 +80,7 @@ li {
 
 .prompt_title_blue {
     font-family: "Indie Flower", Arial;
-    font-size: 22px;
+    font-size: 32px;
 	color: blue;
 	font-weight: bold;
 	text-decoration: underline;
@@ -88,13 +88,37 @@ li {
 
 .prompt_title_green {
     font-family: "Indie Flower", Arial;
+    font-size: 32px;
+	color: green;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+.prompt_title_red_small {
+    font-family: "Indie Flower", Arial;
+    font-size: 22px;
+	color: red;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+.prompt_title_blue_small {
+    font-family: "Indie Flower", Arial;
+    font-size: 22px;
+	color: blue;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+.prompt_title_green_small {
+    font-family: "Indie Flower", Arial;
     font-size: 22px;
 	color: green;
 	font-weight: bold;
 	text-decoration: underline;
 }
 
-.prompt_title_black {
+.prompt_title_black_small {
     font-family: "Indie Flower", Arial;
     font-size: 22px;
 	color: black;
@@ -188,12 +212,13 @@ li {
 }
 
 .page-container {
-    width: 100%;
-    height: 100vh
+    width: 80%;
+    height: 80vh;
+    margin:0 auto;
 }
 
 .swiper {
-    width: 500px;
+    width: 750px;
     margin-top: 30px;
 }
 
