--- a/style.css
+++ b/style.css
@@ -346,7 +346,11 @@ button {
 }
 
 .interactive_bold {
-    font-size: 16px;
+    font-size: 20px;
+}
+
+.fixed-height-row {
+    min-height: 200px;
 }
 
 @media	(max-width: 600px){
