--- a/style.css
+++ b/style.css
@@ -352,8 +352,8 @@ button {
     font-size: 20px;
 }
 
-.fixed-height-row {
-    min-height: 200px;
+.interactiv_vid {
+    margin-bottom: 30px;
 }
 
 @media	(max-width: 600px){
